[package]
name = "chord"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.28.0", features = ["full"] }
tonic = "0.9.2"
prost = "0.11.9"
log = "0.4.17"
simple_logger = "4.1.0"
blake3 = "1.3.3"

[build-dependencies]
tonic-build = { version = "0.9.2", features = ["prost"] }
