[package]
name = "chord"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.28.0", features = ["full"] }
tonic = { version = "0.9.2", features = ["tls"]}
prost = "0.11.9"
log = "0.4.17"
simple_logger = "4.1.0"
blake3 = "1.3.3"
clap = { version = "4.3.0", features = ["derive"] }
tonic-reflection = "0.9.2"
tokio-stream = { version = "0.1", features = ["net"] }
rust-ini = "0.19.0"
rayon = "1.7.0"
actix-web = "4.0.0"
tera = "1.19.1"
serde = { version = "1.0.196", features = ["derive"] }


[build-dependencies]
tonic-build = { version = "0.9.2", features = ["prost"] }
prost-build = "0.11.9"
